--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer{
-    width: 100vw;
+    width: 100%;
     height: 30vh;
     background-image: url('http://txspeedlabperformance.com/wp-content/themes/advance-automobile-pro/assets/images/footerbg.jpg');
     background-size: cover;
