--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 6vh;
+    padding-top: 12vh;
 }
 
 
