--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -1,5 +1,5 @@
 .cart-container{
-    background-color: #F9F9F9;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     flex-direction: column;
