--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -54,7 +54,6 @@
     width: 100vw;
     align-items: center;
     padding-right: 10vw;
-   
     position: fixed;
     top: 0;
     opacity: 0.8;
@@ -74,18 +73,14 @@
     border: none;
     border-radius: 5px;
     font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
+    }
 #hamburger-menu{
     height: 5vw;
     width: 5vw;
     margin-left: 5vw;
-    
     min-height: 25px;
     min-width: 25px;
     opacity: 1;
-
-
-
 }
 
 #snail-under700{
@@ -102,72 +97,43 @@
 .dropdown-menu-open{
     animation: openMenu .5s forwards linear;
     color: white;
-    width: 40%;
+    width: 150px;
     background-image: url('http://txspeedlabperformance.com/wp-content/themes/advance-automobile-pro/assets/images/footerbg.jpg'); 
     position: absolute;
-    top: 6vh;
+    top: 5vh;
     height: 40vh;
     z-index: 100;
+    display: flex;
     flex-direction: column;
+    justify-content: flex-start
 }
 #under700-text{
-    margin-left: 10vw;
-    animation: under700-text .5s forwards linear;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    animation: under700-text .7s forwards linear;
 }
 .dropdown-menu-close{
-    animation: closeMenu .5s forwards linear;
+    animation: closeMenu 1s forwards linear;
     display: none;
 }
   
 @keyframes under700-text {
     from { height: 0vh;} 
-    to {height: 2vh;}
+    to {height: 21px;}
     }
   @keyframes openMenu {
   from { height: 0vh;} 
-  to {height: 22vh;}
-  }
+  to {height: 200px;}
+   }
   @keyframes closeMenu {
-    from { height: 25vh;} 
-    to {height: 2vh;}
+    from { height: 200px;} 
+    to {height: 2px;}
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
 
 /* --------UNDER 700 AREA -------- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -183,8 +149,6 @@
     #snail-over700{
         display: none;
     }
-
-
 
     .navHeader-under700{
         display: flex;
